--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,10 @@ a {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+
+  .team-list {
+    background-color: #ffffff;
+  }
 }
 .team-subtitle {
   font-weight: 500;
@@ -158,7 +162,7 @@ a {
   line-height: 120%;
   letter-spacing: 0.02em;
   text-align: center;
-  color: var(--navy-blue);
+  color: #2e2f42;
 }
 .portfolio-text {
   font-weight: 400;
